@@ -4,6 +4,8 @@ Version 2.6.0
 * Allow mount command to work on label rather than device
 * listfs command to list available filesystems with labels
 * mk5cp support for append mode: will continue writing partial files of matching filenames
+* mk5cp support for single scan with time range
+* mk5cp support for provided filenames
 
 Version 2.5.0
 ~~~~~~~~~~~~~
